# grpc_work

./: .gitignore
grpc_csharp/GreeterServer/: GreeterServer.cs  GreeterServer.csproj
grpc_csharp/proto/: unifmu_fmi2.proto
grpc_python/: helloworld_server.py  unifmu_fmi2_pb2.py  unifmu_fmi2_pb2_grpc.py  unifmu_server.py
grpc_python/proto/: handshake.proto  unifmu_fmi2.proto
grpc_python/schema/: handshake_pb2_grpc.py  unifmu_fmi2_pb2.py  unifmu_fmi2_pb2_grpc.py
grpc_python/src/: adder.py  backend_grpc.py  backend_schemaless_rpc.py  command_server.py  fmi2.py  generate_from_proto.py  handshake_pb2.py  launch.py
grpc_rust/: Cargo.toml  build.rs
grpc_rust/proto/: handshake.proto  unifmu_fmi2.proto
grpc_rust/src/: grpc_protobuf.rs  handshake_proto.rs  helloworld_server.rs  unifmu_client.rs  unifmu_fmi2_proto.rs
